CR-2003-03-04-0  Bugfix:    Removed not unique message id 49094

CR-2003-03-03-2  Bugfix:    - qevent -help worked only for running GE system

CR-2003-03-03-1  Enhancem.  - new function in sge_dir.h: sge_is_executable()
                            - qevent client: client can now trigger script
                                execution on job end events.
                            - testsuite extension for new qevent -ts option

CR-2002-03-03-0  Bugfix:    Removed unused variables in scheduler.c

AH-2002-02-28-1  Enhancem.: Ensure drmaa_exit() can be called while
                            a second thread does a drmaa_run_job() or
                            drmaa_wait().
                            Enhanced test_japi into a test application 
                            providing means to do multiple tests.
                            Implemented drmaa_strerror().
                 Review:    CR

AH-2002-02-28-0  Enhancem.: Event client was not restartable. To fix this the 
                            whole event client state is resetted when 
                            ec_deregister() is called. Also a problem has
                            been fixed that could cause two event client 
                            instances registered at qmaster depending how
                            event client interface calls were used.
                 Review:    JG

JG-2002-02-28-0  Enhancem.: Integrated multi level profiling into scheduler.
                 Review:    EB

EB-2002-02-27-1  Enhancem.: Moved answer and feature functions into
                            libsgeobjd.a. Added new object code managing
                            host/hostgroup references. Added new test modules
                            for range and hostgroup code.

JG-2002-02-27-0  Enhancem.: Introduced multiple levels for profiling in
                            sge_profiling.
                 Bugfix:    Scheduler did not get notified about global config
                            changes.